# GVS

./: .gitignore  CMakeLists.txt  README.md  cmakuem.bat  cmakuemAMD.bat  cmakuemNVIDIA.bat  test.cu
.github/workflow/: ci-cd.yml
.github/workflows/: ci-cd.yml
src/: data.cpp  imp.cu  imp.cuh  main.cu
test/: test.cu  test.cuh
